# epicur

./: .gitignore  LICENSE  README.md  epicur.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
src/epicur/: __init__.py  __main__.py  episode_identifier.py  file_organizer.py  kodi_client.py  main.py  metadata_extractor.py  models.py  postprocess.py  review.py  tvheadend_client.py
src/epicur/data/: comskip.ini
tests/: test_core.py  test_integration.py  test_kodi_client.py  test_postprocess.py  test_postprocess_movies.py
