[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epicur"
dynamic = ["version"]
description = "Episode Curator – Automatically identify and organize TV recordings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "epicur contributors" },
]
keywords = ["tv", "recordings", "tvheadend", "episode", "organizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
epicur = "epicur.main:main"

[project.urls]
Homepage = "https://github.com/epicur/epicur"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "epicur.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
